fix: no css overflow on long names

--- a/frontend/src/components/Worksheet/WorksheetNumberDropdown.module.css
+++ b/frontend/src/components/Worksheet/WorksheetNumberDropdown.module.css
@@ -5,10 +5,37 @@
 
 .option {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-right: 50px;
-  position: relative;
+  padding: 8px;
+}
+
+.optionContent {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.optionName {
+  flex: 1; /* fill remaining space */
+  margin-right: 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.iconContainer {
+  display: flex;
+  align-items: center;
+  gap: 12px; /* space between icons */
+}
+
+.renameWorksheetIcon {
+  cursor: pointer;
+}
+
+.deleteWorksheetIcon {
+  cursor: pointer;
 }
 
 .optionAdd {
@@ -28,18 +55,4 @@
   padding: 6px;
   font-size: 14px;
   box-sizing: border-box;
-}
-
-.renameWorksheetIcon {
-  position: absolute;
-  right: 30px;
-  margin-top: 4px;
-  cursor: pointer;
-}
-
-.deleteWorksheetIcon {
-  position: absolute;
-  right: 10px;
-  margin-top: 4px;
-  cursor: pointer;
 }
